--- a/light/assets/css/application.css
+++ b/light/assets/css/application.css
@@ -35,3 +35,8 @@ a:hover {
   color: rgb(234,85,30); 
   background-color: rgba(244,157,18,0.5) !important;
 }
+
+a:focus {
+  color: rgb(234,85,30); 
+  background-color: rgba(244,157,18,0.5) !important;
+}
